samples/_failures_safe/1761687975_1f4c57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c8d73d4.c: In function ‘main’:
./samples/SAFE/__tmp_7c8d73d4.c:150:26: error: missing terminating " character
  150 |     mat2.cols = read_int("Columns (1-
      |                          ^~~~~~~~~~~~
./samples/SAFE/__tmp_7c8d73d4.c:150:5: error: expected expression at end of input
  150 |     mat2.cols = read_int("Columns (1-
      |     ^~~~
./samples/SAFE/__tmp_7c8d73d4.c:150:17: error: too few arguments to function ‘read_int’
  150 |     mat2.cols = read_int("Columns (1-
      |                 ^~~~~~~~
./samples/SAFE/__tmp_7c8d73d4.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_7c8d73d4.c:150:5: error: expected declaration or statement at end of input
  150 |     mat2.cols = read_int("Columns (1-
      |     ^~~~
